# HarnessDB

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DORIS_COMPATIBILITY.md  FINAL_IMPLEMENTATION_SUMMARY.md  GITHUB_STRATEGY.md  IMPLEMENTATION_COMPLETE.md  PERFORMANCE_REPORT.md  README.md  RELEASE_NOTES_v1.0.0.md  demo.sh  star-acquisition-checklist.sh  test_alter.rs  test_sqlparser.rs
.cargo/: config.toml
.claude/: ralph-loop.local.md
benches/: parquet_bench.rs  parquet_bench_main.rs
benches/tpch/: Cargo.toml
benches/tpch/benches/: tpch_bench.rs
benches/tpch/src/: data_gen.rs  lib.rs  queries.rs
conf/: be.conf  fe.conf
config/: server.toml
crates/adb-mysql-protocol/: Cargo.toml
crates/adb-mysql-protocol/src/: handler.rs  lib.rs  server.rs  storage.rs
crates/be-kv/: Cargo.toml
crates/be-rocks/: Cargo.toml
crates/be-rocks/src/: catalog_store.rs  edit_log_store.rs  lib.rs  meta_store.rs  tablet_store.rs
crates/be-storage/: Cargo.toml
crates/be-storage/src/: backup.rs  codec.rs  compaction.rs  engine.rs  index.rs  lib.rs  meta.rs  rowset.rs  tablet.rs  wal.rs
crates/be-storage/src/segment/: mod.rs  parquet_reader.rs  parquet_writer.rs  reader.rs  writer.rs
crates/be-storage/tests/: tablet_test.rs
crates/cassandra-protocol/: Cargo.toml
crates/cassandra-protocol/src/: frame.rs  handler.rs  lib.rs  server.rs  storage.rs
crates/data-io/: Cargo.toml
crates/data-io/src/: csv_reader.rs  csv_writer.rs  fs.rs  json_reader.rs  lib.rs  parquet_reader.rs  row_batch.rs  schema_inference.rs  stream_load.rs
crates/elasticsearch-protocol/: Cargo.toml
crates/elasticsearch-protocol/src/: handler.rs  lib.rs  server.rs  storage.rs
crates/fe-backup/: Cargo.toml
crates/fe-backup/src/: backup_manager.rs  export.rs  lib.rs  repository.rs
crates/fe-catalog/: Cargo.toml
crates/fe-catalog/src/: auth.rs  catalog.rs  database.rs  external.rs  index.rs  lib.rs  materialized_view.rs  partition.rs  procedure.rs  replica.rs  schema_provider.rs  stats.rs  table.rs
crates/fe-common/: Cargo.toml
crates/fe-common/src/: backup.rs  edit_log.rs  ldap.rs  lib.rs  meta.rs  token.rs
crates/fe-datafusion/: Cargo.toml
crates/fe-datafusion/src/: block_convert.rs  catalog.rs  date_udf.rs  doris_udf.rs  lib.rs  misc_udf.rs  table_provider.rs  types.rs
crates/fe-expression/: Cargo.toml
crates/fe-expression/src/: aggregate.rs  evaluator.rs  expr.rs  expr_parser.rs  functions.rs  lib.rs
crates/fe-expression/tests/: README.md  lib.rs
crates/fe-expression/tests/functions/: bitwise.rs  hash.rs  json.rs  math.rs  mod.rs  string.rs
crates/fe-monitor/: Cargo.toml
crates/fe-monitor/src/: audit_log.rs  http_server.rs  information_schema.rs  lib.rs  metrics.rs  query_profile.rs
crates/fe-scheduler/: Cargo.toml
crates/fe-scheduler/src/: cluster.rs  coordinator.rs  exchange.rs  fragment.rs  lib.rs  memory.rs  scheduler.rs  timeline.rs
crates/fe-storage/: Cargo.toml
crates/fe-storage/src/: catalog.rs  information_schema.rs  lib.rs  table_provider.rs  types_compat.rs
crates/influxdb-protocol/: Cargo.toml
crates/influxdb-protocol/src/: handler.rs  lib.rs  line_protocol.rs  server.rs  storage.rs
crates/lindorm-protocol/: Cargo.toml
crates/lindorm-protocol/src/: handler.rs  lib.rs  server.rs  storage.rs
crates/maxcompute-protocol/: Cargo.toml
crates/maxcompute-protocol/src/: auth.rs  error.rs  lib.rs  server.rs  xml_models.rs
crates/maxcompute-protocol/src/handlers/: instances.rs  mod.rs  projects.rs  tables.rs
crates/maxcompute-protocol/src/sql/: mod.rs  translator.rs
crates/maxcompute-protocol/src/tunnel/: compression.rs  handlers.rs  io.rs  json.rs  mod.rs  schema.rs  session.rs
crates/maxcompute-protocol/tests/: integration_tests.rs
crates/mongodb-protocol/: Cargo.toml
crates/mongodb-protocol/src/: connection.rs  handler.rs  lib.rs  server.rs  storage.rs  wire.rs
crates/mysql-protocol/: Cargo.toml
crates/mysql-protocol/src/: charset.rs  connection.rs  lib.rs  packet.rs  server.rs  value.rs
crates/mysql-protocol/src/auth/: mod.rs  native_password.rs  plugin.rs  token.rs
crates/oracle-protocol/: Cargo.toml
crates/oracle-protocol/src/: handler.rs  lib.rs  server.rs  storage.rs  tns.rs
crates/pg-protocol/: Cargo.toml
crates/pg-protocol/src/: auth.rs  catalog.rs  connection.rs  lib.rs  message.rs  server.rs
crates/pg-protocol/tests/: integration_tests.rs
crates/redis-protocol/: Cargo.toml
crates/redis-protocol/src/: commands.rs  connection.rs  handler.rs  lib.rs  resp.rs  server.rs  storage.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: be_client.rs  be_service.rs  fe_service.rs  heartbeat.rs  lib.rs
crates/sql-translators/: Cargo.toml
crates/sql-translators/src/: hologres.rs  lib.rs  maxcompute.rs
crates/sybase-protocol/: Cargo.toml
crates/sybase-protocol/src/: lib.rs  server.rs
crates/tablestore-protocol/: Cargo.toml
crates/tablestore-protocol/src/: handler.rs  lib.rs  server.rs  storage.rs
docs/: JAVA_TO_RUST_CLONE_GUIDE.md  P0改进完成报告.md  P1-materialized-view.md  P1-runtime-filter.md  P2-auth.md  P2-external-catalog.md  P2架构改进完成报告.md  P2架构改进实施计划.md  P2架构改进进度报告.md  README.md  RUST_NATIVE_INNOVATION_PLAN.md  SQL_PARSER_INTEGRATION_PLAN.md  alibaba-cloud-compatibility.md  backend_storage_migration.md  build-plan.md  community-posts.md  compatibility-matrix.md  datafusion_migration.md  e2e-sql-test-suite.md  feature-gap-analysis.md  integration-test-report-2026-05-05.md  integration-test-report.md  protocol-implementation-summary.md  storage-code-review-2026-05-09.md  改进计划.md  设计方案总览.md
harness-server/: Cargo.toml
harness-server/src/: ddl_handler.rs  dml_handler.rs  fe_main.rs  handler_struct.rs  metrics.rs  query_executor.rs  utils.rs
harness-server/src/web/: editor.html  mod.rs  routes.rs
roris-server/: Cargo.toml
roris-server/src/: be_main.rs  connection_tracker.rs  ddl_handler.rs  dml_handler.rs  fe_main.rs  handler_struct.rs  metrics.rs  query_executor.rs  utils.rs
roris-server/src/web/: mod.rs  routes.rs
scripts/: python_integration_test.py  test_multi_connection.py
test_mysql_conn/: Cargo.toml
(+319 files in other folders)
