[workspace]
resolver = "2"
members = [
    # Main entry point
    "roris-server",

    # Frontend (FE) - SQL parsing, query planning, catalog management
    "crates/fe-sql-parser",
    "crates/fe-catalog",
    "crates/fe-common",
    "crates/fe-datafusion",
    "crates/fe-storage",
    "crates/fe-monitor",
    "crates/fe-config",
    "crates/fe-backup",
    "crates/mysql-protocol",

    # Protocol compatibility (database chameleon)
    "crates/maxcompute-protocol",
    "crates/pg-protocol",
    "crates/sql-translators",

    # Metadata backend
    "crates/be-rocks",

    # Shared crates
    "crates/common",
    "crates/types",

    # Tools & utilities
    "tools/tpch_test",
    "tools/mysql_server",

    # Benchmarks
    "benches/tpch",

    # Integration tests
    "tests/integration",
]

[workspace.package]
version = "0.3.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/walker83/RorisDB"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Data structures
hashbrown = "0.15"
indexmap = "2"
bytes = "1"
tokio-stream = { version = "0.1", features = ["fs"] }
dashmap = "6"
parking_lot = "0.12"

# HTTP server (removed — no longer used)

# Date/time handling
chrono = "0.4"

# SQL parsing
sqlparser = "0.53"

# Query engine
datafusion = { version = "48" }
datafusion-datasource = { version = "48" }
arrow = { version = "55", default-features = false, features = ["prettyprint"] }
arrow-schema = { version = "55", default-features = false }
# Arrow sub-crates (match version that datafusion depends on)
arrow-array = { version = "55" }
arrow-buffer = { version = "55" }
arrow-data = { version = "55" }
arrow-cast = { version = "55" }
arrow-select = { version = "55" }
arrow-ord = { version = "55" }
arrow-arith = { version = "55" }

# Storage
rocksdb = "0.23"

# Configuration
toml = "0.8"

# System information
sysinfo = "0.33"

# HTTP server (for SQL editor web UI)
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# Cryptography
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# Testing
mockall = "0.13"

# Async traits
async-trait = "0.1"

# Internal crates
fe-sql-parser = { path = "crates/fe-sql-parser" }
fe-catalog = { path = "crates/fe-catalog" }
fe-common = { path = "crates/fe-common" }
be-rocks = { path = "crates/be-rocks" }
common = { path = "crates/common" }
types = { path = "crates/types" }
fe-datafusion = { path = "crates/fe-datafusion" }
fe-storage = { path = "crates/fe-storage" }
fe-monitor = { path = "crates/fe-monitor" }
fe-config = { path = "crates/fe-config" }
fe-backup = { path = "crates/fe-backup" }
mysql-protocol = { path = "crates/mysql-protocol" }
maxcompute-protocol = { path = "crates/maxcompute-protocol" }
pg-protocol = { path = "crates/pg-protocol" }
sql-translators = { path = "crates/sql-translators" }

# External protocol dependencies
quick-xml = { version = "0.37", features = ["serialize"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
md-5 = "0.10"
postgres-protocol = "0.6"
postgres-types = "0.2"

# Parquet support
parquet = "55"

[profile.release]
strip = true          # Remove debug symbols
lto = true            # Link-time optimization
codegen-units = 1     # Better optimization (slower compile)
opt-level = "z"       # Optimize for size
panic = "abort"       # Smaller panic handling
