[package]
name = "harness-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "harness-db"
path = "src/fe_main.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
sysinfo = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.5"
bytes = { workspace = true }
itoa = { workspace = true }
ryu = { workspace = true }

fe-sql-parser = { workspace = true }
fe-catalog = { workspace = true }
fe-common = { workspace = true }
fe-monitor = { workspace = true }
fe-datafusion = { workspace = true }
fe-storage = { workspace = true }
fe-config = { workspace = true }
fe-backup = { workspace = true }
mysql-protocol = { workspace = true }
maxcompute-protocol = { workspace = true }
pg-protocol = { workspace = true }
redis-protocol = { workspace = true }
mongodb-protocol = { workspace = true }
clickhouse-protocol = { workspace = true }
elasticsearch-protocol = { workspace = true }
influxdb-protocol = { workspace = true }
tablestore-protocol = { workspace = true }
oracle-protocol = { workspace = true }
cassandra-protocol = { workspace = true }
adb-mysql-protocol = { workspace = true }
vector-protocol = { workspace = true }
lindorm-protocol = { workspace = true }
sql-translators = { workspace = true }
tsql-executor = { path = "../crates/tsql-executor" }
sybase-protocol = { path = "../crates/sybase-protocol" }
tds-protocol = { path = "../crates/tds-protocol" }
tsql-parser = { path = "../crates/tsql-parser" }
common = { workspace = true }
types = { workspace = true }
datafusion = { workspace = true }
parquet = { workspace = true }
chrono = { workspace = true }
