[package]
name = "roris-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "roris-fe"
path = "src/fe_main.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tonic = { workspace = true }
proto = { workspace = true }

fe-sql-parser = { workspace = true }
fe-catalog = { workspace = true }
fe-common = { workspace = true }
fe-monitor = { workspace = true }
fe-datafusion = { workspace = true }
fe-storage = { workspace = true }
mysql-protocol = { workspace = true }
common = { workspace = true }
rpc = { workspace = true }
types = { workspace = true }
datafusion = { workspace = true }
chrono = { workspace = true }
