[package]
name = "roris-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "roris-fe"
path = "src/fe_main.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
sysinfo = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.5"

fe-sql-parser = { workspace = true }
fe-catalog = { workspace = true }
fe-common = { workspace = true }
fe-monitor = { workspace = true }
fe-datafusion = { workspace = true }
fe-storage = { workspace = true }
fe-config = { workspace = true }
fe-backup = { workspace = true }
mysql-protocol = { workspace = true }
common = { workspace = true }
types = { workspace = true }
datafusion = { workspace = true }
parquet = { workspace = true }
chrono = { workspace = true }
