[package]
name = "tpch-bench"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
types = { workspace = true }
common = { workspace = true }
fe-sql-parser = { workspace = true }
fe-catalog = { workspace = true }
be-storage = { workspace = true, features = ["parquet-storage"] }
fe-datafusion = { workspace = true }
datafusion = { workspace = true }
criterion = "0.5"

[features]
default = []

[[bench]]
name = "tpch_bench"
harness = false