[package]
name = "tpch-bench"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
types = { workspace = true }
common = { workspace = true }
fe-sql-parser = { workspace = true }
fe-catalog = { workspace = true }
fe-storage = { workspace = true }
fe-datafusion = { workspace = true, features = ["bench"] }
datafusion = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
criterion = "0.5"

[features]
default = []

[[bench]]
name = "tpch_bench"
harness = false