[package]
name = "adb-mysql-protocol"
version = "1.0.0"
edition = "2024"
description = "Alibaba Cloud AnalyticDB for MySQL protocol implementation"

[dependencies]
tokio.workspace = true
bytes.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
dashmap.workspace = true
anyhow.workspace = true
mysql-protocol.workspace = true
sqlparser.workspace = true
