[package]
name = "be-rocks"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rocksdb.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
types.workspace = true

[dev-dependencies]
tempfile = "3"