[package]
name = "be-storage"
version.workspace = true
edition.workspace = true

[features]
default = []
rocksdb = ["be-rocks"]
parquet-storage = ["parquet", "arrow-array", "arrow-schema"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot = "0.12"
bytes = { workspace = true }
common = { workspace = true }
types = { workspace = true }
be-common = { workspace = true }
lz4_flex = "0.11"
lz4 = { workspace = true }
zstd = { workspace = true }
snap = { workspace = true }
roaring = { workspace = true }
dashmap = { workspace = true }
be-rocks = { path = "../be-rocks", optional = true }

# Arrow/Parquet support
parquet = { workspace = true, optional = true }
arrow-array = { workspace = true, optional = true }
arrow-schema = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
