[package]
name = "cassandra-protocol"
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"
description = "Apache Cassandra native protocol implementation for HarnessDB"

[dependencies]
tokio = { workspace = true }
bytes = "1"
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# For data storage
dashmap = "5"
