[package]
name = "data-io"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
common = { workspace = true }
types = { workspace = true }
chrono = { workspace = true }
parquet = "58"