[package]
name = "fe-catalog"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot = "0.12"
common = { workspace = true }
types = { workspace = true }
fe-common = { workspace = true }
dashmap = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
async-trait = { workspace = true }
mysql-protocol = { workspace = true }
be-kv = { workspace = true }

[features]
default = []
rocks-meta = []
