[package]
name = "fe-common"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
common = { workspace = true }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
