[package]
name = "fe-expression"
version.workspace = true
edition.workspace = true

[dependencies]
types = { workspace = true }
common = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
md5 = { workspace = true }
sha1 = { workspace = true }
