[package]
name = "fe-scheduler"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
common = { workspace = true }
types = { workspace = true }
fe-catalog = { workspace = true }
fe-sql-planner = { workspace = true }
fe-sql-parser = { workspace = true }
dashmap = { workspace = true }
