[package]
name = "fe-storage"
version.workspace = true
edition.workspace = true

[dependencies]
parquet = { workspace = true }
arrow = { workspace = true, default-features = false, features = ["prettyprint"] }
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-data = { workspace = true }
arrow-schema = { workspace = true }
arrow-cast = { workspace = true }
arrow-select = { workspace = true }
arrow-ord = { workspace = true }
arrow-arith = { workspace = true }
datafusion = { workspace = true }
datafusion-datasource = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }

fe-catalog = { workspace = true }
fe-datafusion = { workspace = true }
types = { workspace = true }
