[package]
name = "influxdb-protocol"
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"
description = "InfluxDB line protocol implementation for RorisDB - TSDB compatible"

[dependencies]
tokio = { workspace = true }
bytes = "1"
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP server
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
url = "2"

# For data storage
dashmap = "5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
