[package]
name = "lindorm-protocol"
version = "1.0.0"
edition = "2024"
description = "Alibaba Cloud Lindorm (HBase-compatible) protocol implementation"

[dependencies]
tokio.workspace = true
bytes.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
dashmap.workspace = true
anyhow.workspace = true
