[package]
name = "mysql-protocol"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
types = { workspace = true }
common = { workspace = true }
rand = "0.8"
