[package]
name = "mysql-protocol"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
types = { workspace = true }
common = { workspace = true }
rand = "0.8"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
async-trait = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
itoa = { workspace = true }
ryu = { workspace = true }
