[package]
name = "oracle-protocol"
version = "0.3.3"
edition = "2024"
license = "Apache-2.0"
description = "Oracle TNS protocol simulation for RorisDB - PolarDB-O compatible"

[dependencies]
tokio = { workspace = true }
bytes = "1"
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# For data storage
dashmap = "5"
chrono = "0.4"
